# shapes

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp  oldshapes.cpp  oldshapes.h  oopshapes.cpp  oopshapes.h  shapes_benchmark.cpp  shell.nix  types.h
cstyle/: shapes.cpp  shapes.h
oop/: shapes.cpp
src/: CMakeLists.txt  common.h  shapes_benchmark.cpp
src/cleaneroop/: benchmark.cpp  shapes.cpp  shapes.h
src/cstyle/: benchmark.cpp  shapes.cpp
src/functional/: benchmark.cpp  shapes.cpp  shapes.h
src/oop/: benchmark.cpp  shapes.cpp  shapes.h
src/soa/: benchmark.cpp  shapes.cpp  shapes.h
src/union/: benchmark.cpp  shapes.cpp  shapes.h
